--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <rb-header></rb-header>
 <div class="container">
-  <rb-recipes></rb-recipes>
-  <rb-shopping-list></rb-shopping-list>
+  <a [routerLink]="['/']"></a>
+  <router-outlet></router-outlet>
 </div>
 
